objects/kugo2p__QuoteLineGroup__c.object
<CustomObject>
    <description>Kugamon - Related object to Quote that stores that group details for Quote Product Lines and Quote Service Lines.</description>
    <fields>
        <fullName>kugo2p__Favorite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Favorite Group associated with Line Group</inlineHelpText>
        <label>Favorite</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>kugo2p__Favorite__c.kugo2p__IsGroup__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>kugo2p__Favorite__c</referenceTo>
        <relationshipLabel>Quote Line Groups</relationshipLabel>
        <relationshipName>Quote_Line_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__GroupDescription__c</fullName>
        <label>Group Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marks the entire Line Group as Optional</inlineHelpText>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__PrintGroupDescription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Group Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesQuote__c</fullName>
        <label>Quote Number</label>
        <referenceTo>kugo2p__SalesQuote__c</referenceTo>
        <relationshipLabel>Quote Line Groups</relationshipLabel>
        <relationshipName>Quote_Line_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote Line Group</label>
    <nameField>
        <label>Quote Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>